// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`int8 schema test invalid values: -1.5 1`] = `
"expect(received).toMatchSchema(schema)

received
  must be integer
    Path:     dataTypes/int8.schema.json#/type
"
`;

exports[`int8 schema test invalid values: -129 1`] = `
"expect(received).toMatchSchema(schema)

received
  must be >= -128
    Path:     dataTypes/int8.schema.json#/minimum
"
`;

exports[`int8 schema test invalid values: 128 1`] = `
"expect(received).toMatchSchema(schema)

received
  must be <= 127
    Path:     dataTypes/int8.schema.json#/maximum
"
`;
